--- a/client/.gitignore
+++ b/client/.gitignore
@@ -13,11 +13,14 @@
 
 # misc
 .DS_Store
-.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# .env 파일 무시
+.env  
+.env/     
 
 npm-debug.log*
 yarn-debug.log*
