--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.1",
     "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.10",
@@ -16,9 +17,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.8.2",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.8",
+    "typescript": "^5.3.3",
     "uid": "^2.0.2",
     "web-vitals": "^2.1.4"
   },
@@ -45,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.34"
   }
 }
