--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@tanstack/react-query": "^5.14.2",
+    "@tanstack/react-query": "^5.17.19",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,7 +19,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
-    "styled-components": "^5.3.8",
+    "styled-components": "^5.3.11",
     "typescript": "^5.3.3",
     "uid": "^2.0.2",
     "web-vitals": "^2.1.4"
@@ -49,6 +49,8 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.34"
+    "@types/styled-components": "^5.1.34",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0"
   }
 }
